// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`module alias - (["sources", "targets", "options"]) - [["./a.js","unrelated-folder.js"],{"./a":["default"]},{}] 1`] = `
Array [
  "/module-alias/a.js",
  "/module-alias/unrelated-folder.js",
]
`;

exports[`module alias - (["sources", "targets", "options"]) - [["./a.js","unrelated-name.js"],{"./a":["default"]},{}] 1`] = `
Array [
  "/module-alias/a.js",
  "/module-alias/unrelated-name.js",
]
`;
